# wumpus-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  fly.toml  pyproject.toml  requirements.txt
tests/: test_sanitizer.py
wumpus/: main.py  sanitizer.py
